# aiogram-template

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: test_and_lint.yml
bot/: __main__.py  api.py  config.py  settings.py
bot/database/: engine.py
bot/database/models/: chat_models.py  mixins.py  user_models.py
bot/database/repos/: base.py  chat.py  users.py
bot/enums/: db.py
bot/filters/: is_admin.py
bot/handlers/events/: channel.py  chat.py  on_error.py  user.py
bot/handlers/users/: start_help.py
bot/keyboards/: inline.py
bot/middlewares/: README.md  __init__.py  database.py  throttling.py
bot/services/: test_connection.py
bot/utils/: bot_commands.py  links.py  log.py  migrations.py  misc.py
docs/: architecture.md  production-checklist.md
migrations/: env.py
migrations/versions/: 001_initial_schema.py
tests/integration/: conftest.py  test_alembic_migrations.py
tests/integration/db/: data.py  test_base_repo.py  test_user_repo.py
tests/unit/: test_alembic.py  test_api.py  test_middlewares.py  test_settings.py
